--- a/studentmanagementsystemmvc/Views/Shared/_Layout.cshtml
+++ b/studentmanagementsystemmvc/Views/Shared/_Layout.cshtml
@@ -41,8 +41,8 @@
             &copy; 2024 - studentmanagementsystemmvc - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/jquery/dist/jquery-3.4.1.min.js"></script>
+@*     <script src="~/lib/jquery/dist/jquery.min.js"></script> *@
+    <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
