--- a/studentmanagementsystemmvc/Views/Student/Details.cshtml
+++ b/studentmanagementsystemmvc/Views/Student/Details.cshtml
@@ -11,12 +11,15 @@
     /* Minimize page margins */
     body {
         margin: 0;
+        padding:0;
     }
 
     /* Adjust scaling */
     .content {
-        transform: scale(0.8); /* Adjust as needed */
+        transform: scale(0.6); /* Adjust as needed */
         transform-origin: top left;
+        margin-left:1mm;
+
     }
 }
 
